# Playground

./: README.md
Challenge#283AnagramDetector/: CMakeLists.txt  TestInput.txt
Challenge#283AnagramDetector/src/: AnagramDetector.cpp
Challenge#284PunchCardCreator/: CMakeLists.txt
Concurrency/: async.cpp  first_example.cpp  promises_and_futures.cpp
ConfigurationReader/: ConfigurationReader.cpp  configuration_parameters.txt
LinkedList/: .gitignore  CMakeLists.txt  LinkedList.hpp
LinkedList/src/: CMakeLists.txt  LinkedList.hpp  Node.hpp  cos.cpp  cos.hpp  main.cpp
LinkedList/test/: CMakeLists.txt  LinkedListTests.cpp
Misc/: README.md  SFINAE.cpp  auto_and_decltype.cpp  fibonacci_lambda.cpp  fun_with_binds.cpp  lambdas.cpp  shared_and_unique_ptr.cpp  shared_ptr_and_type_erasue.cpp
Stack/: CMakeLists.txt
Stack/src/: Stack.hpp
Stack/test/: CMakeLists.txt
Templates/: variadic_templates.cpp
